--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">斗舞</string>
+    <string name="app_name">乐舞</string>
 
 
     <string name="pay_success">支付成功:</string>
